# py4pd

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  07-MemoryLeaks.pd  404.html  BUILD.md  CITATION.cff  CMakeLists.txt  Ext.pd  Makefile  README.deken.pd  README.md  arbName.py  backup.c  backup.py  build.sh  choral.py  create-inlets.pd  ext.py  global.pd  historico_commits.txt  index.html  main.c  main.pd  main2.c  mkdocs.yml  modules.py  numpyincludes.txt  om.py  partch.pd  pd.pd  py.py  py2pd.c  py2pd2.c  py4pd  py4pd-back.c  py4pd-help.pd  py4pd-multithreading.pd  py4pd.c  (+14 more)
.github/workflows/: Builder.yml  Deken.yml  DekenUpload.yml  Dev-Python312.yaml  Dev-Tests.yml  Dev.yml  Docs.yml  Linux.yml  Mac-Arm.yml  Mac-Intel.yml  Mac.yml  MacM1.yml  Windows.yml  c-cpp.yml  ci.yml  linux.yml  mac.yml  windows.yml
Documentation/: hello.md  index.md  libraries.md  newobject.md  openmusic.md  pdmodule.md  projects.md  puredata-api.md  setup-libs.md  setup.md
Documentation/pd-users/: args.md  index.md  methods.md  py4pd-cfg.md  py4pd-module.md
Documentation/projects/: project1.md  project2.md  project3.md  project4.md
Documentation/puredata/: NewObject2.md  arrays.md  clock.md  dsp.md  globals.md  index.md  inlets.md  libraries.md  output.md  pip.md  puredata-api.md  receiver.md  utils.md
Documentation/py4pd-libs/: index.md
Documentation/python-users/: audio.md  file.md  images.md  index.md  info.md  obj-vars.md  objects.md  pd.add_object.md  player.md  pylibrary.md
Examples/: multithreading.pd  wait.pd
Examples/1 - In and Outs/: outlet.py  pd-kwargs.pd
Examples/2 - Py4pd py Library/: List Comprehension.pd
Examples/3 - Player/: player.pd
Examples/4 - Loops/: 01 - Simple loops.pd  02-Recursives-loops.pd
Resources/: README.deken.pd  loris-help.pd  loris.pd_py  py.py  py4pd-help.pd
Resources/Help/: py.convertion-help.pd  py.loop-help.pd  py.math-help.pd  py.utils-help.pd
Resources/py4pd-mod/: py4pd.py
Sources/: clock.c  dsp.c  ext-class.c  ext-class.cpp  ext-class.h  ext-libraries.c  ext-libraries.cpp  ext-libraries.h  gui.c  module.c  module.cpp  module.h  openmusic.pd_py  pd-module.cpp  pd-module.hpp  pic.c  pic.cpp  pic.h  player.c  player.cpp  player.h  properties.c  proxyinlets.c  py4pd.c  py4pd.cpp  py4pd.h  py4pd.hpp  pyrandom-help.pd  pyrandom.pd_py  pytest-help.pd  pytest.pd_py  test.pd_py  utils.c  utils.cpp  utils.h  utils.hpp
Sources/py4pd/: Untitled-1.pd  __init__.py  convertion.py  gain~.pd_py  info.py  libs.py  list.py  openmusic-help.pd  openmusic.pd_py  operators.py  pip.py  py-properties-help.pd  py.append.pd_py  py.game-help.pd  py.game.pd  py.game.pd_py  py.o.train-help.pd  py.o.train.pd_py  py.pip-help.pd  py.pip.pd_py  py.properties.pd_py  py.score-help.pd  py.score.pd_py  py.vispy-help.pd  py.vispy.pd_py  pymath.py  pymetro-help.pd  pymetro.pd_py  pytest-help.pd  pytest.pd_py  pytest~-help.pd  pytest~.pd_py  tree.py  utils.py
Tests/: 020-simpleRun.pd  030-sequencialRunning.pd  040-wrongNumberOfArgs.pd  060-Loop-inside-Loop.pd  070-MemoryLeaks.pd  071-MemoryLeaks.pd  100-DeleteObj.pd  110-Audio-IN-Memory-Leaks.pd  140-Audio-OUTVAR-Memory-Leaks.pd  150-pdModule-Functions.pd  160-CondaEnv.pd  py.py  runTests.py
Tests/img/: bulbasaur.ppm
Tests/mem/: problem1.pd  problem2.pd  problem5.pd
Tests/not-work-yet/: 00-Python3.12.pd  01-Libs.pd  py.py  threadtest.py
docs/: developers.md  examples.md  generatedocs.py  index.md  libraries.md  new_method_names.txt  objects.md  puredata-users.md  python-users.md  requirements.txt  researchers.md  setup.md
docs/extra/: extra.css
docs/pd-users/: args.md  index.md  methods.md
docs/python-users/: audio.md  data.md  file.md  images.md  index.md  info.md  obj-vars.md  objclass.md  pd.add_object.md  pd.new_object.md  player.md  pylibrary.md  utilities.md
examples/1 - In and Outs/: 1 - outlet.pd  kwargs.py  outlet.py  pd-kwargs.pd
examples/3 - Player/: player.pd  player.py
examples/4 - Loops/: 01 - Simple loops.pd  02-Recursives-loops.pd
extra/: extra.css
hello/: index.html
libraries/: index.html
newobject/: index.html
openmusic/: index.html
pd-lib-builder/: Makefile.pdlibbuilder
pd-users/: index.html
pdmodule/: index.html
projects/: index.html
puredata/: index.html
puredata-api/: index.html
py4pd/: py4pd-help.pd  real_test.pd
py4pd-libs/: index.html
python-users/: index.html
resources/: BUGS.md  NEWS.md  README.deken.pd  compile_commands.json  loop.pd  mac.pd  main.py  mkdocs.yml  myNewPdObjects.py  mypy.py  patch.pd  py.py  py4pd-help.pd  py4pd-libs.json  py4pd.cfg  pyobjects.pd  pyrightconfig.json  python311._pth  score.py  tree.pd  tree.py
scripts/: arg.py  choral.py  modules.py  partch.py  py.py
search/: search_index.json
setup/: index.html
setup-libs/: index.html
src/: dsp.c  dsp.cpp  dsp.h  ext-class.c  ext-class.cpp  ext-class.h  ext-libraries.c  ext-libraries.cpp  ext-libraries.h  mod-py4pd.c  module.c  module.cpp  module.h  outfrompy.pd  outlet_from_py.py  pd_module.c  pd_module.h  pic.c  pic.h  player.c  player.cpp  player.h  py4pd-backup.c  py4pd.c  py4pd.cpp  py4pd.h  py4pd_exe.c  py4pd_pic.c  py4pd_pic.h  py4pd_tilde.c  py4pd_utils.c  py4pd_utils.h  pylibraries.c  pylibraries.h  utils.c  utils.cpp  utils.h
test/: 01-Install-modules.pd  01-simpleRun.pd  02-noArgs.pd  02-simpleRun.pd  03-sequencialRunning.pd  04-neoscore.pd  04-wrongNumberOfArgs.pd  05-neoscore.pd  05-setDifferentFunctions.pd  05-wrongNumberOfArgs.pd  06-Loop-inside-Loop.pd  06-Minor-Tets.pd  06-Objects.pd  06-setDifferentFunctions.pd  07-MemoryLeaks.pd  07-MemoryLeaks_JUSTLINUX.pd  070-MemoryLeaks.pd  08-Gui.pd  08-MemoryLeaks.pd  09-List.pd  090-List.pd  10-DeleteObj.pd  10-deleteObj.pd  11-Audio-IN-Memory-Leaks.pd  11-Loop-inside-Loop.pd  12-Audio-OUT-Memory-Leaks-NOISE.pd  120-Audio-OUT-Memory-Leaks-NOISE.pd  13-Audio-IN-OUT-Memory-Leaks.pd  130-Audio-IN-OUT-Memory-Leaks.pd  14-Audio-OUTVAR-Memory-Leaks.pd  15-pdModule-Functions.pd  localtests.pd  multichannel.py  newclass.py  panic.pd  py.py  py4pd-help.pd  py4pd.cfg  runTests.py  test.pd  (+3 more)
(+228 files in other folders)
